--- a/TRMDesktopUI/Views/LoginView.xaml
+++ b/TRMDesktopUI/Views/LoginView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TRMDesktopUI.Views"
-             mc:Ignorable="d" Background="White" FontSize="20"
+             mc:Ignorable="d" Background="White" FontSize="24"
              d:DesignHeight="425" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -32,13 +32,13 @@
                    Margin="0 0 0 20" Foreground="Red" MaxWidth="300" TextWrapping="Wrap" />
 
         <!-- Username row -->
-        <TextBlock Grid.Row="2" Grid.Column="1" Margin="0 0 5 10">
+        <TextBlock Grid.Row="2" Grid.Column="1" Margin="0 0 5 10" HorizontalAlignment="Right">
             Username:
         </TextBlock>
         <TextBox x:Name="UserName" Grid.Row="2" Grid.Column="2" MinWidth="350" Margin="0 0 0 10" />
         
         <!-- Password row -->
-        <TextBlock Grid.Row="3" Grid.Column="1" Margin="0 0 5 20">
+        <TextBlock Grid.Row="3" Grid.Column="1" Margin="0 0 5 20" HorizontalAlignment="Right">
             Password:
         </TextBlock>
         <PasswordBox x:Name="Password" Grid.Row="3" Grid.Column="2" MinWidth="350" Margin="0 0 0 20" />
