--- a/TRMDesktopUI/Views/SalesView.xaml
+++ b/TRMDesktopUI/Views/SalesView.xaml
@@ -29,12 +29,18 @@
         <TextBlock Text="Sales Page" FontSize="48" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="0 0 0 10" />
         <!-- Column 1: Products List -->
         <TextBlock Text="Items" Grid.Row="1" Grid.Column="0" />
-        <ListBox x:Name="Products" Grid.Row="2" Grid.Column="0" MinHeight="200" MinWidth="150" />
+        <ListBox x:Name="Products" Grid.Row="2" Grid.Column="0" MinHeight="200" MinWidth="150" >
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding ProductName}" />
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
 
         <!-- Column 2: -->
         <StackPanel Orientation="Vertical" Grid.Row="2" Grid.Column="1" Margin="20 0">
             <TextBlock Text="Quantity" />
-            <TextBox x:Name="ItemQuantity" MinWidth="100" Margin="0 0 0 10" />
+            <TextBox x:Name="ItemQuantity" Text="0" MinWidth="100" Margin="0 0 0 10" />
             <Button x:Name="AddToCart" Content="Add to Cart" Margin="0 20 0 10" Padding="5" />
             <Button x:Name="RemoveFromCart" Content="Remove from Cart" Padding="5" />
         </StackPanel>
