--- a/TRMDesktopUI/Views/SalesView.xaml
+++ b/TRMDesktopUI/Views/SalesView.xaml
@@ -32,7 +32,20 @@
         <ListBox x:Name="Products" Grid.Row="2" Grid.Column="0" MinHeight="200" MinWidth="150" SelectedIndex="{Binding SelectedProduct}" >
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding ProductName}" />
+                    <!--<TextBlock Text="{Binding ProductName}" />-->
+                    <StackPanel Orientation="Vertical">
+                        <TextBlock Text="{Binding ProductName}" />
+                        <StackPanel Orientation="Horizontal">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="Price: " FontSize="14" />
+                                <TextBlock Text="{Binding RetailPrice, StringFormat='{}{0:C}'}" FontSize="14" />
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="5 0 0 0">
+                                <TextBlock Text="Qty: " FontSize="14" />
+                                <TextBlock Text="{Binding QuantityInStock}" FontSize="14" />
+                            </StackPanel>
+                        </StackPanel>
+                    </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
@@ -55,19 +68,19 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-            <DockPanel Grid.Row="3" Grid.Column="2">
+        <DockPanel Grid.Row="3" Grid.Column="2">
             <TextBlock Text="SubTotal: " Margin="0 0 15 0" />
-            <TextBlock x:Name="SubTotal" Text="$0.00" TextAlignment="Right" />
+            <TextBlock x:Name="SubTotal" Text="0,00 kr" TextAlignment="Right" />
         </DockPanel>
 
         <DockPanel Grid.Row="4" Grid.Column="2">
             <TextBlock Text="Tax: " />
-            <TextBlock x:Name="Tax" Text="$0.00" TextAlignment="Right" />
+            <TextBlock x:Name="Tax" Text="0,00 kr" TextAlignment="Right" />
         </DockPanel>
 
         <DockPanel Grid.Row="5" Grid.Column="2">
             <TextBlock Text="Total: " />
-            <TextBlock x:Name="Total" Text="$0.00" TextAlignment="Right" />
+            <TextBlock x:Name="Total" Text="0,00 kr" TextAlignment="Right" />
         </DockPanel>
 
         <Button x:Name="CheckOut" Grid.Row="6" Grid.Column="2" Content="Check Out" Margin="0 20 0 0" Padding="5" />
