--- a/TRMDesktopUI/Views/SalesView.xaml
+++ b/TRMDesktopUI/Views/SalesView.xaml
@@ -29,7 +29,7 @@
         <TextBlock Text="Sales Page" FontSize="48" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="0 0 0 10" />
         <!-- Column 1: Products List -->
         <TextBlock Text="Items" Grid.Row="1" Grid.Column="0" />
-        <ListBox x:Name="Products" Grid.Row="2" Grid.Column="0" MinHeight="200" MinWidth="150" SelectedIndex="{Binding SelectedProduct}" >
+        <ListBox x:Name="Products" Grid.Row="2" Grid.Column="0" MinHeight="200" MinWidth="150" SelectedItem="{Binding SelectedProduct}" >
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <!--<TextBlock Text="{Binding ProductName}" />-->
@@ -60,7 +60,7 @@
 
         <!-- Column 3: Cart -->
         <TextBlock Text="Cart" Grid.Row="1" Grid.Column="2" />
-        <ListBox x:Name="Cart" Grid.Row="2" Grid.Column="2" MinHeight="200" MinWidth="150">
+        <ListBox x:Name="Cart" Grid.Row="2" Grid.Column="2" MinHeight="200" MinWidth="150" SelectedItem="{Binding SelectedCartItem}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding DisplayText}" />
