--- a/TRMDesktopUI/Views/UserDisplayView.xaml
+++ b/TRMDesktopUI/Views/UserDisplayView.xaml
@@ -27,9 +27,9 @@
 
         <!-- Header -->
         <TextBlock Text="User Administration" FontSize="48" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Margin="0 0 0 10" />
-        <!-- Column 1: Products List -->
+        <!-- Column 0: Users List -->
         <TextBlock Text="Users" Grid.Row="1" Grid.Column="0" />
-        <ListBox x:Name="Users" Grid.Row="2" Grid.Column="0" MinHeight="200" MinWidth="150" >
+        <ListBox x:Name="Users" Grid.Row="2" Grid.Column="0" MinHeight="200" MinWidth="150" SelectedItem="SelectedUser">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Vertical">
@@ -40,5 +40,22 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
+        <!-- Column 1 -->
+        <StackPanel Orientation="Vertical" Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Margin="20 0 0 0">
+            <TextBlock x:Name="SelectedUserName" Margin="0 0 0 10" />
+            <TextBlock Text="Current Roles" />
+            <StackPanel Orientation="Horizontal" Margin="0 0 0 10">
+                <!--<ListBox x:Name="SelectedUserRoles" SelectedItem="SelectedRoleToRemove"></ListBox>-->
+                <ListBox x:Name="UserRoles"></ListBox>
+                <Button x:Name="RemoveSelectedRole" Content="Remove" Margin="5 0 0 0" />
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <!--<ComboBox x:Name="AvailableRoles" SelectedItem="SelectedRoleToAdd" />-->
+                <!--<ComboBox x:Name="AvailableRoles" SelectedItem="SelectedAvailableRole" />-->
+                <!-- Caliburn Micro Issue -->
+                <ComboBox x:Name="AvailableRoles" />
+                <Button x:Name="AddSelectedRole" Content="Add Role" Margin="5 0 0 0" />
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </UserControl>
